@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_actions">
+  <object name="document_actions">
+    <object remove="True" name="pdf" meta_type="CMF Action"/>
+  </object>
+</object>
