@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" meta_type="Plone Control Panel Tool">
+  <configlet
+      remove="True"
+      action_id="aws.pdfbook"
+      appId="aws.pdfbook"
+      category="Products"
+      title="PDF book"
+      />
+</object>
